# aws_dns_updater

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
ip_reporting/: aws_wrapper.py  ip_address_resolver.py
